--- a/pages/carrinho.html
+++ b/pages/carrinho.html
@@ -99,7 +99,7 @@
                           </tr>
                         </thead>
                         <tbody>
-                          <tr id="produto11">
+                          <tr id="produto11" class="listaProdutos">
                             <th scope="row" style="width: 40%;">
                                 <div class="container-fluid p-0 m-0 d-flex">
                                     <div class="container p-1 m-0 bg-secondary" style="width: 40%; height: 15rem;"></div>
@@ -114,11 +114,11 @@
                             </th>
                             <td style="width: 16%;">
                                 <div class="w-100 p-2 d-flex justify-content-center align-items-center gap-1" style="height: 15rem;">
-                                    <button type="button" id="remover11" class="btn">
+                                    <button type="button" id="remover11" class="btn remover1">
                                         <img src="../imgs/icones/caret-down-fill.svg" alt="">
                                     </button>
-                                    <span id="numeroProduto11">0</span>
-                                    <button type="button" id="adicionar11" class="btn">
+                                    <span id="numeroProduto11" class="numeroProduto1">0</span>
+                                    <button type="button" id="adicionar11" class="btn adicionar1">
                                         <img src="../imgs/icones/caret-up-fill.svg" alt="">
                                     </button>
                                 </div>
@@ -130,18 +130,18 @@
                             </td>
                             <td style="width: 16%;">
                                 <div class="w-100 p-2 d-flex justify-content-center align-items-center gap-1" style="height: 15rem;">
-                                    <p class="h4" style="color: var(--French-gray1);">R$<span id="subtotalProduto11">0,00</span></p>
+                                    <p class="h4" style="color: var(--French-gray1);">R$<span id="subtotalProduto11" class="subtotalProduto1">0,00</span></p>
                                 </div>
                             </td>
                             <td style="width: 12%;">
                                 <div class="w-100 p-2 d-flex justify-content-center align-items-center gap-1" style="height: 15rem;">
-                                    <button type="button" id="cancelar11" class="btn">
+                                    <button type="button" id="cancelar11" class="btn btn-cancelar">
                                         <img src="../imgs/icones/x-circle-fill.svg" alt="">
                                     </button>
                                 </div>
                             </td>
                           </tr>
-                          <tr id="produto21">
+                          <tr id="produto21" class="listaProdutos">
                             <th scope="row" style="width: 40%;">
                                 <div class="container-fluid p-0 m-0 d-flex">
                                     <div class="container p-1 m-0 bg-secondary" style="width: 40%; height: 15rem;"></div>
@@ -156,11 +156,11 @@
                             </th>
                             <td style="width: 16%;">
                                 <div class="w-100 p-2 d-flex justify-content-center align-items-center gap-1" style="height: 15rem;">
-                                    <button type="button" id="remover21" class="btn">
+                                    <button type="button" id="remover21" class="btn remover1">
                                         <img src="../imgs/icones/caret-down-fill.svg" alt="">
                                     </button>
-                                    <span id="numeroProduto21">0</span>
-                                    <button type="button" id="adicionar21" class="btn">
+                                    <span id="numeroProduto21" class="numeroProduto1">0</span>
+                                    <button type="button" id="adicionar21" class="btn adicionar1">
                                         <img src="../imgs/icones/caret-up-fill.svg" alt="">
                                     </button>
                                 </div>
@@ -172,18 +172,18 @@
                             </td>
                             <td style="width: 16%;">
                                 <div class="w-100 p-2 d-flex justify-content-center align-items-center gap-1" style="height: 15rem;">
-                                    <p class="subtotal h4" style="color: var(--French-gray1);">R$<span id="subtotalProduto21">0,00</span></p>
+                                    <p class="subtotal h4" style="color: var(--French-gray1);">R$<span id="subtotalProduto21" class="subtotalProduto1">0,00</span></p>
                                 </div>
                             </td>
                             <td style="width: 12%;">
                                 <div class="w-100 p-2 d-flex justify-content-center align-items-center gap-1" style="height: 15rem;">
-                                    <button type="button" id="cancelar21" class="btn">
+                                    <button type="button" id="cancelar21" class="btn btn-cancelar">
                                         <img src="../imgs/icones/x-circle-fill.svg" alt="">
                                     </button>
                                 </div>
                             </td>
                           </tr>
-                          <tr id="produto31">
+                          <tr id="produto31" class="listaProdutos">
                             <th scope="row" style="width: 40%;">
                                 <div class="container-fluid p-0 m-0 d-flex">
                                     <div class="container p-1 m-0 bg-secondary" style="width: 40%; height: 15rem;"></div>
@@ -198,11 +198,11 @@
                             </th>
                             <td style="width: 16%;">
                                 <div class="w-100 p-2 d-flex justify-content-center align-items-center gap-1" style="height: 15rem;">
-                                    <button type="button" id="remover31" class="btn">
+                                    <button type="button" id="remover31" class="btn remover1">
                                         <img src="../imgs/icones/caret-down-fill.svg" alt="">
                                     </button>
-                                    <span id="numeroProduto31">0</span>
-                                    <button type="button" id="adicionar31" class="btn">
+                                    <span id="numeroProduto31" class="numeroProduto1">0</span>
+                                    <button type="button" id="adicionar31" class="btn adicionar1">
                                         <img src="../imgs/icones/caret-up-fill.svg" alt="">
                                     </button>
                                 </div>
@@ -214,12 +214,12 @@
                             </td>
                             <td style="width: 16%;">
                                 <div class="w-100 p-2 d-flex justify-content-center align-items-center gap-1" style="height: 15rem;">
-                                    <p class="subtotal h4" style="color: var(--French-gray1);">R$<span id="subtotalProduto31">0,00</span></p>
+                                    <p class="subtotal h4" style="color: var(--French-gray1);">R$<span id="subtotalProduto31" class="subtotalProduto1">0,00</span></p>
                                 </div>
                             </td>
                             <td style="width: 12%;">
                                 <div class="w-100 p-2 d-flex justify-content-center align-items-center gap-1" style="height: 15rem;">
-                                    <button type="button" id="cancelar31" class="btn">
+                                    <button type="button" id="cancelar31" class="btn btn-cancelar">
                                         <img src="../imgs/icones/x-circle-fill.svg" alt="">
                                     </button>
                                 </div>
@@ -230,7 +230,7 @@
 
                     <!-- Modo mobile -->
                     <div class="container-fluid m-0 p-0 d-lg-none d-md-flex d-sm-flex flex-column gap-3">
-                        <div id="produto12" class="container-fluid m-0 mb-2 p-2 d-flex border border-dark rounded-4">
+                        <div id="produto12" class="container-fluid m-0 mb-2 p-2 d-flex border border-dark rounded-4 listaProdutos">
                             <div class="d-flex align-items-end rounded-4 bg-secondary" style="height: 18rem; width: 40%;">
                                 <div class="container-fluid m-0 p-0 d-flex align-items-center "style="height: 25%;">
                                     <p class="w-100 h4 text-center">R$115,90</p>
@@ -238,7 +238,7 @@
                             </div>
                             <div class="px-3 d-flex flex-column justify-content-center gap-3" style="width: 60%;">
                                 <div class="container-fluid p-0 m-0 d-flex justify-content-end">
-                                    <button type="button" id="cancelar12" class="btn">
+                                    <button type="button" id="cancelar12" class="btn btn-cancelar">
                                         <img src="../imgs/icones/x-circle-fill.svg" alt="">
                                     </button>
                                 </div>
@@ -256,21 +256,21 @@
                                 <div class="container-fluid m-0 p-0 pt-2 d-flex gap-3">
                                     <div class="w-50 d-flex justify-content-center align-items-center h-100 gap-2">
                                         <div class="p-2 d-flex justify-content-center aligh-items-center gap-1 border border-dark rounded" style="height: 90%; width: 90%;">
-                                            <button type="button" id="remover12" class="btn d-flex aligh-items-center">
+                                            <button type="button" id="remover12" class="btn d-flex aligh-items-center remover2">
                                                 <img src="../imgs/icones/caret-down-fill.svg" alt="">
                                             </button>
-                                            <span id="numeroProduto12">0</span>
-                                            <button type="button" id="adicionar12" class="btn d-flex aligh-items-center">
+                                            <span id="numeroProduto12" class="numeroProduto2">0</span>
+                                            <button type="button" id="adicionar12" class="btn d-flex aligh-items-center adicionar2">
                                                 <img src="../imgs/icones/caret-up-fill.svg" alt="">
                                             </button>
                                         </div>
                                     </div>
-                                    <p class="w-50 h2 text-center m-0 pt-2" style="color: var(--French-gray1);">R$<span id="subtotalProduto12">0,00</span></p>
+                                    <p class="w-50 h2 text-center m-0 pt-2" style="color: var(--French-gray1);">R$<span id="subtotalProduto12" class="subtotalProduto2">0,00</span></p>
                                 </div>
                             </div>
                         </div>
 
-                        <div id="produto22" class="container-fluid m-0 mb-2 p-2 d-flex border border-dark rounded-4">
+                        <div id="produto22" class="container-fluid m-0 mb-2 p-2 d-flex border border-dark rounded-4 listaProdutos">
                             <div class="d-flex align-items-end rounded-4 bg-secondary" style="height: 18rem; width: 40%;">
                                 <div class="container-fluid m-0 p-0 d-flex align-items-center "style="height: 25%;">
                                     <p class="w-100 h4 text-center">R$50,49</p>
@@ -278,7 +278,7 @@
                             </div>
                             <div class="px-3 d-flex flex-column justify-content-center gap-3" style="width: 60%;">
                                 <div class="container-fluid p-0 m-0 d-flex justify-content-end">
-                                    <button type="button" id="cancelar22" class="btn">
+                                    <button type="button" id="cancelar22" class="btn btn-cancelar">
                                         <img src="../imgs/icones/x-circle-fill.svg" alt="">
                                     </button>
                                 </div>
@@ -296,21 +296,21 @@
                                 <div class="container-fluid m-0 p-0 pt-2 d-flex gap-3">
                                     <div class="w-50 d-flex justify-content-center align-items-center h-100 gap-2">
                                         <div class="p-2 d-flex justify-content-center aligh-items-center gap-1 border border-dark rounded" style="height: 90%; width: 90%;">
-                                            <button type="button" id="remover22" class="btn d-flex aligh-items-center">
+                                            <button type="button" id="remover22" class="btn d-flex aligh-items-center remover2">
                                                 <img src="../imgs/icones/caret-down-fill.svg" alt="">
                                             </button>
-                                            <span id="numeroProduto22">0</span>
-                                            <button type="button" id="adicionar22" class="btn d-flex aligh-items-center">
+                                            <span id="numeroProduto22" class="numeroProduto2">0</span>
+                                            <button type="button" id="adicionar22" class="btn d-flex aligh-items-center adicionar3">
                                                 <img src="../imgs/icones/caret-up-fill.svg" alt="">
                                             </button>
                                         </div>
                                     </div>
-                                    <p class="w-50 h2 text-center m-0 pt-2" style="color: var(--French-gray1);">R$<span id="subtotalProduto22">0,00</span></p>
+                                    <p class="w-50 h2 text-center m-0 pt-2" style="color: var(--French-gray1);">R$<span id="subtotalProduto22" class="subtotalProduto2">0,00</span></p>
                                 </div>
                             </div>
                         </div>
 
-                        <div id="produto32" class="container-fluid m-0 mb-2 p-2 d-flex border border-dark rounded-4">
+                        <div id="produto32" class="container-fluid m-0 mb-2 p-2 d-flex border border-dark rounded-4 listaProdutos">
                             <div class="d-flex align-items-end rounded-4 bg-secondary" style="height: 18rem; width: 40%;">
                                 <div class="container-fluid m-0 p-0 d-flex align-items-center "style="height: 25%;">
                                     <p class="w-100 h4 text-center">R$80,00</p>
@@ -318,7 +318,7 @@
                             </div>
                             <div class="px-3 d-flex flex-column justify-content-center gap-3" style="width: 60%;">
                                 <div class="container-fluid p-0 m-0 d-flex justify-content-end">
-                                    <button type="button" id="cancelar32" class="btn">
+                                    <button type="button" id="cancelar32" class="btn btn-cancelar">
                                         <img src="../imgs/icones/x-circle-fill.svg" alt="">
                                     </button>
                                 </div>
@@ -336,16 +336,16 @@
                                 <div class="container-fluid m-0 p-0 pt-2 d-flex gap-3">
                                     <div class="w-50 d-flex justify-content-center align-items-center h-100 gap-2">
                                         <div class="p-2 d-flex justify-content-center aligh-items-center gap-1 border border-dark rounded" style="height: 90%; width: 90%;">
-                                            <button type="button" id="remover32" class="btn d-flex aligh-items-center">
+                                            <button type="button" id="remover32" class="btn d-flex aligh-items-center remover2">
                                                 <img src="../imgs/icones/caret-down-fill.svg" alt="">
                                             </button>
-                                            <span id="numeroProduto32">0</span>
-                                            <button type="button" id="adicionar32" class="btn d-flex aligh-items-center">
+                                            <span id="numeroProduto32" class="numeroProduto2">0</span>
+                                            <button type="button" id="adicionar32" class="btn d-flex aligh-items-center adicionar3">
                                                 <img src="../imgs/icones/caret-up-fill.svg" alt="">
                                             </button>
                                         </div>
                                     </div>
-                                    <p class="w-50 h2 text-center m-0 pt-2" style="color: var(--French-gray1);">R$<span id="subtotalProduto32">0,00</span></p>
+                                    <p class="w-50 h2 text-center m-0 pt-2" style="color: var(--French-gray1);">R$<span id="subtotalProduto32" class="subtotalProduto2">0,00</span></p>
                                 </div>
                             </div>
                         </div>
