--- a/pages/pagamento.html
+++ b/pages/pagamento.html
@@ -64,8 +64,8 @@
             </header>
 
             <main class="container-fluid p-0 m-0">
-                <section id="local" class="container-fluid px-2 py-1 d-flex flex-wrap" style="height: 10rem; background-color: var(--Slate-gray);">
-                    <div class="w-50 w-lg-50 w-md-75 d-flex justify-content-center align-items-center " style="--bs-breadcrumb-divider: '>'; height: 100%;" aria-label="breadcrumb">
+                <section id="local" class="container-fluid px-3 py-1 d-flex flex-wrap" style="height: 10rem; background-color: var(--Slate-gray);">
+                    <div class="w-100 d-flex justify-content-start align-items-center " style="--bs-breadcrumb-divider: '>'; height: 100%;" aria-label="breadcrumb">
                         <ol class="breadcrumb">
                           <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
                           <li class="breadcrumb-item"><a href="loja.html">Loja</a></li>
@@ -90,35 +90,35 @@
                 <section id="formaPagamento" class="container-fluid px-5 d-flex flex-wrap flex-colum justify-content-center gap-2">
                     <p class="h5 w-100 text-start">Qual a forma de pagamento preferida?</p>
                     <div class="container-fluid m-0 p-1 row" style="height: 6rem;">
-                        <div class="col-3 d-flex align-items-center justify-content-center h-100">
+                        <div class="col-3 p-0 d-flex align-items-center justify-content-center h-100">
                             <div class="container-fluid p-0 m-0 h-100 w-100 d-flex justify-content-center">
                                 <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off">
-                                <label class="btn btn-outline-secondary h-100 w-75 w-lg-75 w-md-100" for="option1">
+                                <label class="btn btn-outline-secondary p-0 h-100 w-75 w-lg-75 w-md-100" for="option1">
                                     <img src="../imgs/icones/mastercard.svg" alt="" class="h-100 w-75">
                                 </label>
                             </div>
                         </div>
 
-                        <div class="col-3 d-flex align-items-center justify-content-center h-100">
+                        <div class="col-3 p-0 d-flex align-items-center justify-content-center h-100">
                             <div class="container-fluid p-0 m-0 h-100 d-flex justify-content-center">
                                 <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off">
-                                <label class="btn btn-outline-secondary h-100 w-75 w-lg-75 w-md-100" for="option2">
+                                <label class="btn btn-outline-secondary p-0 h-100 w-75 w-lg-75 w-md-100" for="option2">
                                     <img src="../imgs/icones/visa.svg" alt="" class="h-100 w-75">
                                 </label>
                             </div>
                         </div>
-                        <div class="col-3 d-flex align-items-center justify-content-center h-100">
+                        <div class="col-3 p-0 d-flex align-items-center justify-content-center h-100">
                             <div class="container-fluid p-0 m-0 h-100 d-flex justify-content-center">
                                 <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off">
-                                <label class="btn btn-outline-secondary h-100 w-75 w-lg-75 w-md-100" for="option3">
+                                <label class="btn btn-outline-secondary p-0 h-100 w-75 w-lg-75 w-md-100" for="option3">
                                     <img src="../imgs/icones/paypal.svg" alt="" class="h-100 w-75">
                                 </label>
                             </div>
                         </div>
-                        <div class="col-3 d-flex align-items-center justify-content-center h-100">
+                        <div class="col-3 p-0 d-flex align-items-center justify-content-center h-100">
                             <div class="container-fluid p-0 m-0 h-100 d-flex justify-content-center">
                                 <input type="radio" class="btn-check" name="options" id="option4" autocomplete="off" checked>
-                                <label class="btn btn-outline-secondary h-100 w-75 w-lg-75 w-md-100" for="option4">
+                                <label class="btn btn-outline-secondary p-0 h-100 w-75 w-lg-75 w-md-100" for="option4">
                                     <img src="../imgs/icones/pix.svg" alt="" class="h-100 w-75">
                                 </label>
                             </div>
@@ -129,7 +129,7 @@
                 <section id="formulario" class="container-fluid p-5 d-flex flex-wrap flex-column justify-content-center gap-3">
                     <p class="h5 w-100 text-start">Complete suas informações (não vamos compartilha-los hehe)</p>
                     <form action="" method="post" class="container-fluid m-0 p-0 d-flex flex-column gap-4">
-                        <div class="container-fluid m-0 p-0 d-flex justify-content-center align-items-center gap-5">
+                        <div class="container-fluid m-0 p-0 d-flex justify-content-center align-items-center gap-2">
                             <div class="w-50">
                                 <input type="text" placeholder="Primeiro Nome" class="form-control bg-secondary border-dark rounded-start" id="nomeInput" style="height: 4rem;">
                             </div>
@@ -147,13 +147,13 @@
                         </div>
 
                         <div class="container-fluid m-0 p-0 row">
-                            <div class="col-4 p-0 pe-2 m-0">
+                            <div class="col-4 p-0 pe-1 m-0">
                                 <input type="date" min="0" placeholder="Validade" class="form-control bg-secondary border-dark rounded-end" id="validadeInput" style="height: 4rem;">
                             </div>
-                            <div class="col-4 p-0 px-2 m-0">
+                            <div class="col-4 p-0 px-1 m-0">
                                 <input type="number" min="0" maxlength="3" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);" placeholder="CVV" class="form-control bg-secondary border-dark rounded-end" id="cvvInput" style="height: 4rem;">
                             </div>
-                            <div class="col-4 p-0 ps-2 m-0">
+                            <div class="col-4 p-0 ps-1 m-0">
                                 <input type="text" min="0" placeholder="Nome do titular do cartão" class="form-control bg-secondary border-dark rounded-end" id="titularInput" style="height: 4rem;">
                             </div>
                         </div>
