--- a/pages/carrinho.html
+++ b/pages/carrinho.html
@@ -372,7 +372,7 @@
                                   <tr>
                                     <th scope="row">
                                         <div id="pac" class="form-check w-100 d-flex align-items-center justify-content-center">
-                                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                            <input class="form-check-input" type="radio" name="flexRadioDefault1" id="flexRadioDefault1">
                                         </div>
                                     </th>
                                     <td>PAC</td>
@@ -382,7 +382,7 @@
                                   <tr>
                                     <th scope="row">
                                         <div id="loja" class="form-check w-100 d-flex align-items-center justify-content-center">
-                                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                                            <input class="form-check-input" type="radio" name="flexRadioDefault1" id="flexRadioDefault2">
                                         </div>
                                     </th>
                                     <td>Retirar num beco escuro</td>
@@ -391,8 +391,8 @@
                                   </tr>
                                   <tr>
                                     <th scope="row">
-                                        <div id="sedex1" class="form-check w-100 d-flex align-items-center justify-content-center">
-                                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="freteValor">
+                                        <div id="" class="form-check w-100 d-flex align-items-center justify-content-center">
+                                            <input checked class="form-check-input" type="radio" name="flexRadioDefault1" id="sedex1">
                                         </div>
                                     </th>
                                     <td>SEDEX</td>
@@ -445,7 +445,7 @@
                                   <tr>
                                     <th scope="row">
                                         <div id="pac" class="form-check w-100 d-flex align-items-center justify-content-center">
-                                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                            <input class="form-check-input" type="radio" name="flexRadioDefault2" id="flexRadioDefault1">
                                             <label class="form-check-label" for="flexRadioDefault1">
                                             </label>
                                         </div>
@@ -457,7 +457,7 @@
                                   <tr>
                                     <th scope="row">
                                         <div id="loja" class="form-check w-100 d-flex align-items-center justify-content-center">
-                                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                                            <input class="form-check-input" type="radio" name="flexRadioDefault2" id="flexRadioDefault2">
                                         </div>
                                     </th>
                                     <td>Retirar num beco escuro</td>
@@ -466,8 +466,8 @@
                                   </tr>
                                   <tr>
                                     <th scope="row">
-                                        <div id="sedex2" class="form-check w-100 d-flex align-items-center justify-content-center">
-                                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="freteValor">
+                                        <div id="" class="form-check w-100 d-flex align-items-center justify-content-center">
+                                            <input class="form-check-input" type="radio" name="flexRadioDefault2" id="sedex2" checked>
                                         </div>
                                     </th>
                                     <td>SEDEX</td>
@@ -499,7 +499,7 @@
                         <hr class="w-100">
                         <div class="container-fluid m-0 p-4 d-flex justify-content-between align-items-center">
                             <p class="h3">Frete</p>
-                            <p class="h4" style="color: var(--French-gray2);">R$<span class="freteTotal2">0,00</span></p>
+                            <p class="h4" style="color: var(--French-gray2);">R$<span id="freteTotal2">0,00</span></p>
                         </div>
                         <hr class="w-100">
                         <div class="container-fluid m-0 p-4 d-flex justify-content-between align-items-center">
